# github-copilot-demo

./: .gitignore  .mcp.json  Dockerfile.mcp-server  README.md  docker-compose.yml  init.sql  pyproject.toml  setup.sh  start-mysql-mcp-docker.sh  start-mysql-mcp.sh  switch-mcp-mode.sh  test-docker-env.sh  test-env.sh  test_python_env.py
mysql_mcp_demo/: __init__.py
spec/: 01-implementation-plan.md  02-architecture.md  03-configuration.md  04-troubleshooting.md  README.md
